<resources>
    <string name="app_name">SMTUCky</string>
    <string name="delete_view">Delete</string>
    <string name="logout">Logout</string>
    <string name="action_about">About us</string>

    <string name="facebook_app_id">102975180504714</string>
    <string name="fb_login_protocol_scheme">fb102975180504714</string>
    <string name="title_activity_route">RouteActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hint">Alarm Name</string>
    <string name="pick_time">Pick time!</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="routes">Routes</string>
    <string name="no_permission">This alarm will drop everywhere!</string>
    <string name="see_routes">See Routes</string>

    <string name="name_route">Route Name:</string>
    <string name="route_start">Start:</string>
    <string name="route_end">End:</string>
    <string name="app_credits">Computação Móvel 2017/2018 | Filipe Mendes, Gonçalo Santos, Inês Fidalgo</string>

</resources>
